<resources>
    <string name="app_name">My Application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Search</string>
    <string name="menu_slideshow">Create</string>
    <string name="Profil">Profil</string>
    <string name="Shop">Shop</string>
    <string name="Streak">Streak</string>
    <string name="Junkset">Junkset</string>
    <string name="Home" >Home</string>
    <string name="Search">Search</string>
    <string name="Notes">Create</string>
    <string name="Leaderboards" >Leaderboards</string>
    <string name="Settings">Settings</string>
    <string name="app_level" />
</resources>